[package]
name = "actix-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
env_logger = "0.10.0"
awc = { version = "3.4.0" }

[[bin]]
edition = "2021"
name = "edmaster"
path = "src/main.rs"
